Added most of the logic. searching, admin dashboard, decorating is remaining

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Welcome to the Sponsorship Coordination Platform</h1>
-    <p>Use the navigation bar to access the different features of the platform.</p>
+    <a href="{{ url_for('register') }}" class="button">Register</a>
+    <a href="{{ url_for('login') }}" class="button">Login</a> 
 </body>
 </html>
