--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -2,26 +2,106 @@
 <html>
     <head>
         <title>Sponsor Dashboard</title>
-        <script>
-            function showForm() {
-                if (document.getElementById('Campaign_Form').style.display == "none") {
-                    document.getElementById('Campaign_Form').style.display = "block";
-                } else {
-                    document.getElementById('Campaign_Form').style.display = "none";
-                }
-            }
-        </script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="\static\script.js"></script>
     </head>
     <body>
-        <h1>Published Campaigns</h1>
-        <button onclick="showForm()">Create Campaign</button>
+        <button onclick="showForm('Profile'); hideForm('Current_Campaigns'); hideForm('Ad_Request'); hideForm('Campaign_Form')">Profile Page</button>
+        <button onclick="hideForm('Profile'); showForm('Current_Campaigns'); hideForm('Ad_Request'); hideForm('Campaign_Form')">Published Campaign</button>
+        <button onclick="hideForm('Profile'); hideForm('Current_Campaigns'); showForm('Ad_Request'); hideForm('Campaign_Form')">Ad Requests</button>
+        <button onclick="hideForm('Profile'); hideForm('Current_Campaigns'); hideForm('Ad_Request'); showForm('Campaign_Form')">Create Campaign</button>
         <form method="POST">
             <input type="hidden" name="form_id" value="search">
             <button type="submit">Search for Influencers</button>
         </form>
+        <a href="{{ url_for('home') }}" class="button">Logout</a>
+        
+        <div id="Profile" style="display: block;">
+            <h1>Welcome, {{ sponsor.name }}</h1>
+            <p>Industry: {{ sponsor.industry }}</p>
+            <p>Email: {{ sponsor.email }}</p>
+            <button onclick="Form_toggle('EditProfile')">Edit Details</button>
+            <div id="EditProfile" style="display: none;">
+                <form method="POST">
+                    <input type="hidden" name="form_id" value="edit_profile">
+                    Name: <input type="text" name="name" value="{{ sponsor.name }}"><br>
+                    Industry: <input type="text" name="industry" value="{{ sponsor.industry }}"><br>
+                    <button type="submit">Submit</button>
+                </form>
+                <button onclick="hideForm('EditProfile')">Cancel</button>
+            </div>
+        </div>
+        <div id="Current_Campaigns" style="display: none;">
+            <h1>Published Campaigns</h1>
+            {% if campaigns | length == 0 %}
+                <p>No campaigns published yet.</p>
+            {% endif %}
+            {% for campaign in campaigns %}
+                <p>{{ campaign.name }}</p>
+                <p>{{ campaign.goals }}</p>
+                <p>{{ campaign.visibility }}</p>
+                <p>{{ campaign.budget }}</p>
+                <p>{{ campaign.start_date }}</p>
+                <p>{{ campaign.end_date }}</p>
+                <button onclick="showForm('Edit_Form'); hideForm('Delete_Form'); id_toggle2('edit_campaign','{{ campaign.campaign_id }}');
+                Fill_Campaign('{{ campaign.name }}', '{{ campaign.goals }}', '{{ campaign.visibility }}', '{{ campaign.start_date }}', '{{ campaign.end_date }}', '{{ campaign.budget }}')">Edit</button>
+                <button onclick="hideForm('Edit_Form'); showForm('Delete_Form'); id_toggle2('delete_campaign','{{ campaign.campaign_id }}')">Delete</button>
+            {% endfor %}
+            <div id="Edit_Form" style="display: none;">
+                <form method="POST" id="edit_campaign">
+                    <input type="hidden" name="campaign_id">
+                    <input type="hidden" name="form_id" value="edit">
+                    Name: <input type="text" name="name"><br>
+                    Goals: <input type="text" name="goals"><br>
+                    Start Date: <input type="date" name="start_date"><br>
+                    End Date: <input type="date" name="end_date"><br>
+                    Visibility: <input type="radio" id="public" name="visibility" value="public">
+                    <label for="public">Public</label>
+                    <input type="radio" id="private" name="visibility" value="private">
+                    <label for="private">Private</label><br>
+                    Budget: <input type="number" name="budget"><br>
+                    <button type="submit">Submit</button>
+                </form>
+                <button onclick="hideForm('Edit_Form')">Cancel</button>
+            </div>
+            <div id="Delete_Form" style="display: none;">
+                <form method="POST" id="delete_campaign">
+                    <input type="hidden" name="campaign_id">
+                    <input type="hidden" name="form_id" value="delete">
+                    <h1>Are you sure you want to delete this campaign?</h1>
+                    <button type="submit">Delete</button>
+                </form>
+                <button onclick="hideForm('Delete_Form')">Cancel</button>
+            </div>
+        </div>
+        <div id="Ad_Request" style="display: none;">
+            <h1>Ad Requests</h1>
+            {% if ad_requests | length == 0 %}
+                <p>No Ad Requests sent yet.</p>
+            {% endif %}
+            {% for ad_request in ad_requests %}
+                <p>{{ ad_request.messages }}</p>
+                <p>{{ ad_request.requirements }}</p>
+                <p>{{ ad_request.payment_amount }}</p>
+                {% if ad_request.sent_to_influencer %}
+                    <p>Sent to Influencer</p>
+                    <p>Status: {{ ad_request.status }}</p>
+                {% else %}
+                    <p>Reverted from Influencer</p>
+                    <form method="POST">
+                        <input type="hidden" name="form_id" value="ad_request">
+                        <input type="hidden" name="ad_request_id" value="{{ ad_request.ad_request_id }}">
+                        <button type="submit" name="status" value="Accept">Accept</button>
+                        <button type="submit" name="status" value="Reject">Reject</button>
+                    </form>
+                {% endif %}
+            {% endfor %}
+        </div>
         <div id="Campaign_Form" style="display: none;">
             <form method="POST">
                 <input type="hidden" name="form_id" value="campaign">
+                Name: <input type="text" name="name"><br>
                 Goals: <input type="text" name="goals"><br>
                 Start Date: <input type="date" name="start_date"><br>
                 End Date: <input type="date" name="end_date"><br>
@@ -33,14 +113,5 @@
                 <button type="submit">Create</button>
             </form>
         </div>
-        {% if campaigns | length == 0 %}
-            <p>No campaigns published yet.</p>
-        {% endif %}
-        {% for campaign in campaigns %}
-            <p>{{ campaign.goals }}</p>
-            <p>{{ campaign.visibility }}</p>
-            <p>{{ campaign.budget }}</p>
-        {% endfor %}
-        <a href="{{ url_for('home') }}" class="button">Logout</a>
     </body>
 </html>
