--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome to the Sponsorship Coordination Platform</h1>
-    <a href="{{ url_for('register') }}" class="button">Register</a>
-    <a href="{{ url_for('login') }}" class="button">Login</a> 
+    <p>Register as a <a href="{{ url_for('register_sponsor') }}" class="button">Sponsor</a> or an <a href="{{ url_for('register_influencer') }}" class="button">Influencer</a></p>
+    <p><a href="{{ url_for('login') }}" class="button">Login</a></p>
 </body>
 </html>
