--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -2,66 +2,174 @@
 <html>
     <head>
         <title>Influencer Dashboard</title>
-        <script src="\static\script.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <button onclick="showForm('Profile'); hideForm('ad_request_tab')">Profile</button>
-        <button onclick="hideForm('Profile'); showForm('ad_request_tab')">Ad Requests</button>
-        <form method="POST">
-            <input type="hidden" name="form_id" value="search">
-            <button type="submit">Search for Campaigns</button>
-        </form>
-        <a href="{{ url_for('home') }}" class="button">Logout</a>
-        <div id="Profile" style="display: block;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Welcome {{ influencer.name }}</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Ad Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Stats</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('search', type='campaign') }}">Find</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+              </ul>
+            </div>
+        </nav>
+
+        <!-- Profile Page -->
+        <div id="Profile">
             <h1>Welcome, {{ influencer.name }}</h1>
             <p>Category: {{ influencer.category }}</p>
-            <p>Niche: {{ influencer.niche }}</p>
             <p>Reach: {{ influencer.reach }}</p>
             <p>Email: {{ influencer.email }}</p>
-            <button onclick="Form_toggle('EditProfile')">Edit Details</button>
-            <div id="EditProfile" style="display: none;">
-                <form method="POST">
-                    <input type="hidden" name="form_id" value="edit_profile">
-                    Name: <input type="text" name="name" value="{{ influencer.name }}"><br>
-                    Category: <input type="text" name="category" value="{{ influencer.category }}"><br>
-                    Niche: <input type="text" name="niche" value="{{ influencer.niche }}"><br>
-                    Reach: <input type="number" name="reach" value="{{ influencer.reach }}"><br>
-                    <button type="submit">Submit</button>
-                </form>
-                <button onclick="hideForm('EditProfile')">Cancel</button>
+            <!-- Edit Profile modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editProfileModal">
+                Edit Profile
+            </button>
+            
+            <!-- Edit Profile Modal -->
+            <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <form method="POST" id="edit_profile">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editProfileModalLabel">Edit Profile</h5>
+                        </div>
+                        <div class="modal-body">
+                            <input type="hidden" name="form_id" value="edit_profile">
+                            <!-- Name input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="text" name="name" id="Full_Name" value="{{ influencer.name }}" class="form-control" required maxlength="45" pattern="^[a-zA-Z]+"/>
+                                <label class="form-label" for="Full_Name">Full Name</label>
+                            </div>
+
+                            <!-- Category input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="text" id="Category" name="category" value="{{ influencer.category }}" class="form-control" required maxlength="45" pattern="^[a-zA-Z]+"/>
+                                <label class="form-label" for="Category">Industry</label>
+                            </div>
+
+                            <!-- Reach input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="number" id="Reach" name="reach" value="{{ influencer.reach }}" class="form-control" required/>
+                                <label class="form-label" for="Reach">Reach</label>
+                            </div>
+                        
+                            <!-- Password input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="password" id="Pass" name="pass" class="form-control" required minlength="8" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{8,}$"/>
+                                <label class="form-label" for="Pass">Change Password</label>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </form>
+                </div>
+                </div>
             </div>
         </div>
-        <div id="ad_request_tab" style="display: none;">
+
+        <!-- Ad Requests Page -->
+        <div id="Ad_Request">
+            <h1>Ad Requests</h1>
             {% if ad_requests | length == 0 %}
-                <p>No Ad Requesta recieved yet.</p>
+                <p>No Ad Requests recieved yet.</p>
             {% endif %}
             {% for ad_request in ad_requests %}
-                <p>{{ ad_request.messages }}</p>
-                <p>{{ ad_request.requirements }}</p>
-                <p>{{ ad_request.payment_amount }}</p>
-                {% if ad_request.sent_to_influencer %}
-                    <p>{{ ad_request.status }}</p>
-                    {% if ad_request.status == "Pending" %}
-                        <form method="POST">
-                            <input type="hidden" name="form_id" value="ad_request">
-                            <input type="hidden" name="ad_request_id" value="{{ ad_request.ad_request_id }}">
-                            <button type="submit" name="status" value="Accept">Accept</button>
-                            <button type="submit" name="status" value="Reject">Reject</button>
-                        </form>
-                        <button onclick="Form_toggle('negotiate')">Negotiate</button>
-                        <div id="negotiate" style="display: none;">
-                            <form method="POST">
-                                <input type="hidden" name="form_id" value="negotiate">
-                                <input type="hidden" name="ad_request_id" value="{{ ad_request.ad_request_id }}">
-                                Messages: <input type="text" name="messages" value="{{ ad_request.messages }}">
-                                Requirements: <input type="text" name="requirements" value="{{ ad_request.requirements }}">
-                                Payment: <input type="number" name="payment_amount" value="{{ ad_request.payment_amount }}">
-                                <button type="submit">Send</button>
-                            </form>
-                        </div>
-                    {% endif %}
-                {% endif %}
+                <div class="card">
+                    <div class="card-header">
+                        {{ ad_request.name }}
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Messages: {{ ad_request.messages }}</p>
+                        <p class="card-text">Requirements: {{ ad_request.requirements }}</p>
+                        <p class="card-text">Payment Amount: {{ ad_request.payment_amount }}</p>
+                        {% if not ad_request.negotiate %}
+                            <!-- Revert Ad Request Button -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#revertAd{{ ad_request.id }}">
+                                Revert
+                            </button>
+                            <!-- Negotiate Ad Request Button -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#negotiateAd{{ ad_request.id }}">
+                                Negotiate
+                            </button>
+                            <!-- Revert Ad Request Modal -->
+                            <div class="modal fade" id="revertAd{{ ad_request.id }}" tabindex="-1" role="dialog" aria-labelledby="revertAd" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <form method="POST" id="revert_ad">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="revertAd">Revert to Ad Request</h5>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" name="form_id" value="revert_ad">
+                                            <input type="hidden" name="id" value="{{ ad_request.id }}">
+                                            <label class="form-label">Would you like to Accept or Reject?</label>
+                                            <label class="form-label">Ad Request for Campaign {{ ad_request.name }}</label>
+                                            <label class="form-label">Messages: {{ ad_request.messages }}</label>
+                                            <label class="form-label">Requirements: {{ ad_request.requirements }}</label>
+                                            <label class="form-label">Payment Amount: {{ ad_request.payment_amount }}</label>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" name="status" value="Accept" class="btn btn-primary">Accept</button>
+                                            <button type="submit" name="status" value="Reject" class="btn btn-primary">Reject</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                </div>
+                            </div>
+                            <!-- Negotiate Ad Request Modal -->
+                            <div class="modal fade" id="negotiateAd{{ ad_request.id }}" tabindex="-1" role="dialog" aria-labelledby="negotiateAd" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <form method="POST" id="negotiate_ad">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="negotiateAd">Negotiate Ad Request</h5>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" name="form_id" value="negotiate_ad">
+                                            <input type="hidden" name="id" value="{{ ad_request.id }}">
+                                            <label class="form-label">Ad Request for Campaign {{ ad_request.name }}</label>
+                                            <label class="form-label">Messages: {{ ad_request.messages }}</label>
+                                            <label class="form-label">Requirements: {{ ad_request.requirements }}</label>
+                                            <input type="number" id="Payment_Amount" name="payment_amount" value="{{ ad_request.payment_amount }}" class="form-control" required>
+                                            <label class="form-label">Payment Amount</label>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" name="status" class="btn btn-primary">Send Request</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                </div>
+                            </div>
+                        {% else %}
+                            <p>Status: {{ ad_request.status }}</p>
+                        {% endif %}
+                    </div>
+                </div>
             {% endfor %}
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
