--- a/templates/search.html
+++ b/templates/search.html
@@ -2,54 +2,138 @@
 <html>
     <head>
         <title>Search</title>
-        <script src="\static\script.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Search</h1>
-        <form method="POST" id="Search_Form">
-            <input type="hidden" name="form_id" value="search">
-            <input type="text" name="query" placeholder="Search">
-            Sort by: <select name="sort">
-                    <option value="none">None</option>
-                {% if type == "influencer" %}
-                    <option value="reach">Reach</option>
-                    <option value="category">Category</option>
-                {% elif type == "campaign" %}
-                    <option value="budget">Budget</option>
-                {% endif %}
-                </select>
-                <button type="submit">Search</button>
-            </form>
-        <ul>
-            {% if type == "influencer" %}
-                {% for influencer in influencers %}
-                    <li>{{ influencer.name }}, {{ influencer.category }}, {{ influencer.reach }}, {{ influencer.email }}
-                        <button onclick="Form_toggle('Ad_Form'); id_toggle('Ad_Form','influencer','{{ influencer.influencer_id }}')">Send Ad Request</button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Search</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                {% if type == "influencers" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('sponsor_dashboard') }}">Home</a>
                     </li>
-                {% endfor %}
-            {% elif type == "campaign" %}
-                {% for campaign in campaigns %}
-                    <li>{{ campaign.name }} {{ campaign.start_date }}, {{ campaign.end_date }}, {{ campaign.budget }}, {{ campaign.goals }}</li>
-                    <button onclick="Form_toggle('Ad_Form'); id_toggle('Ad_Form','campaign','{{ campaign.campaign_id }}')">Send Ad Request</button>
-                {% endfor %}
-            {% endif %}
-        </ul>
-        <form id="Ad_Form" method="POST" style="display: none;">
-            <input type="hidden" name="form_id" value="ad_request">
-            <input type="hidden" name="influencer_id" value={{ id }}>
-            {% if type == "influencer" %}
-                Campaign: <select name="campaign_id">
-                    {% for campaign in campaigns %}
-                        <option value="{{ campaign.campaign_id }}">{{ campaign.goals }}</option>
-                    {% endfor %}
-                </select>
-            {% elif type == "campaign" %}
-                <input type="hidden" name="campaign_id">
-            {% endif %}
-            Message: <input type="text" name="message" placeholder="Message">
-            Requirements: <input type="text" name="requirements" placeholder="Requirements">
-            Payment: <input type="number" name="payment_amount" placeholder="Payment Amount">
-            <button type="submit">Send</button>
-        </form>
+                {% elif type == "campaigns" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('influencer_dashboard') }}">Home</a>
+                    </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input type="hidden" name="form_id" value="search_name">
+                <input type="hidden" name="type" value="{{ type }}">
+                <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+        </nav>
+
+        {% if type == "influencers" %}
+            {% for influencer in results %}
+            <div class="card">
+                <div class="card-header">
+                    {{ influencer.name }}
+                </div>
+                <div class="card-body">
+                    <p class="card-text">{{ influencer.email }}</p>
+                    <p class="card-text">{{ influencer.category }}</p>
+                    <p class="card-text">{{ influencer.reach }}</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestAd{{ influencer.id }}">
+                        Request
+                    </button>
+                    <!-- Send Ad Request Modal -->
+                    <div class="modal fade" id="requestAd{{ influencer.id }}" tabindex="-1" role="dialog" aria-labelledby="requestAd" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <form method="POST" id="request_ad">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="requestAd">Send an Ad Request</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input type="hidden" name="form_id" value="ad_request">
+                                        <input type="hidden" name="id" value="{{ influencer.id }}">
+                                        <select class="form-select" name="campaign_id" id="Campaign" aria-label="Default select example">
+                                            {% for camp in campaign %}
+                                                <option value="{{ camp.id }}">{{ camp.name }}</option>
+                                            {% endfor %}
+                                        </select>
+                                        <label class="form-label" for="Campaign">Campaign</label>
+                                        <input type="text" name="message" id="Messages" class="form-control" required/>
+                                        <label class="form-label" for="Messages">Messages</label>
+                                        <input type="text" name="requirement" id="Requirements" class="form-control" required/>
+                                        <label class="form-label" for="Requirements">Requirements</label>
+                                        <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required/>
+                                        <label class="form-label" for="Payment_Amount">Payment Amount</label>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" name="status" class="btn btn-primary">Request</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        {% elif type == "campaigns" %}
+            {% for campaign in results %}
+            <div class="card">
+                <div class="card-header">
+                    {{ campaign.name }}
+                </div>
+                <div class="card-body">
+                    <p class="card-text">{{ campaign.description }}</p>
+                    <p class="card-text">{{ campaign.goals }}</p>
+                    <p class="card-text">{{ campaign.budget }}</p>
+                    <p class="card-text">{{ campaign.start_date }}</p>
+                    <p class="card-text">{{ campaign.end_date }}</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: {{ campaign.progress }}%;" aria-valuenow="{{ campaign.progress }}" aria-valuemin="0" aria-valuemax="100">{{ campaign.progress }}%</div>
+                    </div>
+                    {% if campaign.progress < 100 %}
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestAd{{ campaign.id }}">
+                            Request
+                        </button>
+                    {% endif %}
+                    <!-- Send Ad Request Modal -->
+                    <div class="modal fade" id="requestAd{{ campaign.id }}" tabindex="-1" role="dialog" aria-labelledby="requestAd" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <form method="POST" id="request_ad">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="requestAd">Send an Ad Request</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input type="hidden" name="form_id" value="ad_request">
+                                        <input type="hidden" name="id" value="{{ id }}">
+                                        <input type="text" name="message" id="Messages" class="form-control" required/>
+                                        <label class="form-label" for="Messages">Messages</label>
+                                        <input type="text" name="requirement" id="Requirements" class="form-control" required/>
+                                        <label class="form-label" for="Requirements">Requirements</label>
+                                        <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required/>
+                                        <label class="form-label" for="Payment_Amount">Payment Amount</label>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" name="status" class="btn btn-primary">Request</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        {% endif %}
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
